<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:id="@+id/sc_invoice">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        

        android:padding="1dp"

        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/one"
    android:layout_below="@+id/image">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"

        />

          <TextView
                android:id="@+id/id_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:textColor="@color/black"
              android:textSize="@dimen/text_size"
                android:layout_toRightOf="@+id/name"
               />


</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/one"
        android:id="@+id/two">

    <TextView
        android:id="@+id/id_cost_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"

        android:text="@string/cost_price" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/rupee"
            android:id="@+id/rupee_img1"/>

            <TextView
                android:id="@+id/id_cost_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:text="---"

                android:layout_toRightOf="@+id/rupee_img1"

        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:layout_below="@+id/two">
    <TextView
        android:id="@+id/Selling_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"

        android:text="@string/selling_price" />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/rupee"
            android:layout_marginTop="4dp"
            android:id="@+id/rup"

        />

         <TextView
                android:id="@+id/id_selling_price_value"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size"
                android:paddingRight="5dp"
                 android:layout_toRightOf="@+id/rup" />
    <TextView
        android:id="@+id/id_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="X"
        android:textSize="@dimen/text_size"
android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/id_selling_price_value" />

    <EditText
        android:id="@+id/id_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:inputType="number"
        android:text="1"
        android:ems="5"

android:background="@color/orange"

        android:layout_toRightOf="@+id/id_txt" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/rupee"
        android:id="@+id/rupee_img"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:id="@+id/id_total_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"

        android:textSize="@dimen/text_size"
        android:layout_below="@+id/Selling_price"
        android:layout_toRightOf="@+id/image" />
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
     android:layout_below="@id/three"
        android:layout_marginTop="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:id="@+id/id_button_add_cart"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:background="@color/orange"
            android:layout_marginRight="20dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_now"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:id="@+id/id_button_buy_now"
            android:background="@color/orange"

            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/id_stock"
        android:layout_below="@+id/linearLayout2"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:id="@+id/id_brand"
        android:layout_below="@+id/id_stock"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"

        android:id="@+id/id_brand_value"
        android:layout_toRightOf="@+id/id_brand"
        android:layout_below="@+id/id_stock" />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:text="@string/discription"
        android:layout_below="@+id/id_brand"
        />

    <TextView
        android:id="@+id/id_description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/description"
        android:layout_below="@+id/id_brand_value"
        />
    </LinearLayout>
</LinearLayout>
</ScrollView>



</RelativeLayout>