<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:id="@+id/sc_invoice">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/zero"
    android:layout_gravity="center">
    <ImageView
        android:id="@+id/cart_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/orange"
        android:padding="1dp"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/zero"
    android:id="@+id/one">
    <TextView
        android:id="@+id/cart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"

        />

          <TextView
                android:id="@+id/cart_id_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:textColor="@color/black"
              android:textSize="@dimen/text_size"
                android:layout_toRightOf="@+id/cart_name"
              />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:layout_below="@id/one">
    <TextView
        android:id="@+id/cart_id_cost_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"

        android:text="@string/cost_price" />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/rupee"
            android:layout_marginTop="4dp"
            android:id="@+id/rupee_img1"/>

            <TextView
                android:id="@+id/cart_id_cost_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"

                android:layout_toRightOf="@+id/rupee_img1"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:layout_below="@+id/two">
    <TextView
        android:id="@+id/cart_Selling_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20dp"

        android:text="@string/selling_price" />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="15dp"
            android:src="@drawable/rupee"
            android:layout_marginTop="4dp"
            android:id="@+id/rupee_img2"
            />

         <TextView
                android:id="@+id/cart_id_selling_price_value"
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size"
                android:layout_below="@+id/cart_id_cost_price_value"
                 android:layout_toRightOf="@+id/rupee_img2" />
    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_below="@id/cart_id_cost_price"
        android:layout_toRightOf="@+id/cart_id_selling_price_value"
        android:layout_marginRight="5dp"
        />

    <EditText
        android:id="@+id/cart_quantity_value_singleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:ems="5"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:inputType="number"
        android:layout_toRightOf="@+id/txt"
        android:paddingBottom="5dp"

        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/three"
        android:id="@+id/liner5"
        >
    <Button
        android:id="@+id/cart_total_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="10dp"

        android:text="Up-date Quantity "
        android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/rupee"
            android:id="@+id/rupee_img"
            android:layout_margin="10dp"
            android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/cart_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"

        android:textSize="20dp"

        android:layout_toRightOf="@+id/rupee_img"
       android:paddingLeft="10dp"
        />
</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"

        android:layout_marginTop="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/liner5"
      >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_remove"
            android:textColor="@color/black"
            android:id="@+id/cart_id_button_add_cart"
          android:layout_weight="1"
            android:background="@color/orange"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_now"
            android:id="@+id/cart_id_button_buy_now"
            android:textColor="@color/black"
            android:layout_weight="1"
          android:background="@color/orange"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stock_layout"
        android:layout_below="@+id/linearLayout2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/id_stock"
        android:layout_below="@+id/linearLayout2"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/five"
        android:layout_below="@+id/stock_layout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:id="@+id/cart_id_brand"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:id="@+id/cart_id_brand_value"
        android:layout_toRightOf="@+id/cart_id_brand"
         />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/cart_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/five"
        />

    <TextView
        android:id="@+id/cart_id_description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:layout_toRightOf="@+id/cart_description"
        android:layout_below="@+id/five"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>